fix: navigation overflowing on mobile

--- a/components/nav.module.scss
+++ b/components/nav.module.scss
@@ -21,6 +21,7 @@
         vertical-align: middle;
         align-items: center;
         justify-content: center;
+        margin-right: 2rem;
         ul {
             flex: 0 0 auto;
             text-align: left;
